# yoink

./: .SRCINFO  AUR_SUBMISSION_GUIDE.md  Cargo.toml  PKGBUILD  README.md
src/: cli.rs  clipboard.rs  file_processor.rs  main.rs  utils.rs
src/clipboard/: manager.rs  mock.rs  mod.rs
src/file_scanner/: mock.rs  mod.rs  scanner.rs
src/file_tree/: builder.rs  mock.rs  mod.rs
src/text_processor/: mock.rs  mod.rs  processor.rs
